examples/should-fail/f47_impred_bad_lambda_body_kind.lean
def demo4_bad_lambda_body_kind : (A : Type) -> Prop :=
  fun (A : Type) => A
